// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> component should have the default props values when mounted 1`] = `
Object {
  "children": <div>
    child
  </div>,
  "disabled": false,
  "handleHover": [Function],
  "isMobile": false,
  "label": null,
  "labelChildren": null,
  "labelClassName": null,
  "labelHover": true,
  "labelTag": "span",
  "labelTagClassName": null,
}
`;

exports[`<Label /> component should render the <label /> when label as element is passed 1`] = `
<label
  className={null}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div>
    child
  </div>
</label>
`;

exports[`<Label /> component should render the <label /> when label as string with labelTag and labelTagClassName are passed 1`] = `
<label
  className={null}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div>
    child
  </div>
  <div
    className="test"
    dangerouslySetInnerHTML={
      Object {
        "__html": "propLabel",
      }
    }
  />
</label>
`;

exports[`<Label /> component should render the <label /> when labelChildren, labelTag and labelTagClassName are passed 1`] = `
<label
  className={null}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div>
    child
  </div>
  <div
    className="test"
  >
    <span>
      propLabelChildren
    </span>
  </div>
</label>
`;

exports[`<Label /> component should render the <label /> when only the default props are passed 1`] = `
<label
  className={null}
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <div>
    child
  </div>
  <span
    className={null}
    dangerouslySetInnerHTML={
      Object {
        "__html": null,
      }
    }
  />
</label>
`;
